--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.5.1",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^12.23.24",
+    "jwt-decode": "^4.0.0",
     "plyr": "^3.8.3",
     "plyr-react": "^5.3.0",
     "react": "^19.1.1",
